--- a/frontend/src/app/components/AddPage.css
+++ b/frontend/src/app/components/AddPage.css
@@ -388,10 +388,16 @@
 
 .condition-component {
     display: flex;
-    width: 50%;
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
+    gap: 1rem;
+}
+
+.condition-dropdown {
+    padding: 0.5rem;
+    width: 100%;
+    margin-top: .5rem;
 }
 
 .color-selector {
