--- a/frontend/src/app/components/AddPage.css
+++ b/frontend/src/app/components/AddPage.css
@@ -126,7 +126,6 @@
     background: #FFF;
     width: 50%;
     padding: 0.5rem;
-    /* height: 2rem; */
 }
 
 .itemName {
@@ -198,6 +197,7 @@
     width: 100%;
     height: 3.5rem;
     margin-top: 0.6rem;
+    box-shadow: 0px .1rem .2rem 0px rgba(0, 0, 0, 0.25);
 }
 
 .dropdown select {
@@ -213,10 +213,11 @@
     box-shadow: 0px .1rem .2rem 0px rgba(0, 0, 0, 0.25);
 }
 
+
 .p-dropdown-item {
     padding: 0.5rem;
     background-color: #FFF;
-    border-top: 1px solid #808080;
+    border-bottom: 1px solid #DBDBDB;
     display: flex;
     justify-content: space-between;
     border-radius: 0;
@@ -243,11 +244,11 @@
     color: #FFFFFF !important;
     background-color: #9B525F !important;
     border-radius: 0.2rem;
-    padding: 0.2rem;
+    padding: 0.8rem;
     font-size: 1rem;
-    height: 3vh;
-    margin-right: 0.2rem;
-    gap: 0.3rem;
+    height: 3.5vh;
+    margin-right: 0.4rem;
+    gap: 0.4rem;
 }
 
 .p-multiselect-token-label {
@@ -267,7 +268,7 @@
 .p-multiselect-item {
     background-color: #fff;
     padding: 0.5rem;
-    border-top: 1px solid #808080;
+    border-top: 1px solid #DBDBDB;
     border-radius: 0rem;
     display: flex;
     flex-direction: row-reverse;
@@ -584,4 +585,15 @@
 .error-text {
     color: red;
     font-weight: bold;
+}
+
+.p-multiselect .p-multiselect-trigger {
+    transition: transform 0.3s ease-in-out;
+    transform: rotate(0deg); /* Default: arrow pointing down */
+}
+
+/* Rotate the arrow when the dropdown is open */
+.p-multiselect.p-focus .p-multiselect-trigger,
+.p-multiselect.p-multiselect-open .p-multiselect-trigger {
+    transform: rotate(180deg); /* Arrow points up when expanded */
 }
