--- a/frontend/src/app/components/EditPage.css
+++ b/frontend/src/app/components/EditPage.css
@@ -561,20 +561,27 @@
 
 .cancel-submit {
     display: flex;
-    justify-content: flex-end;
+    flex-direction: column;
+    align-items: flex-end;
     position: fixed;
     bottom: 1.25rem;
     right: 1.25rem;
     z-index: 1000;
 }
 
+.statusMessage {
+    margin-bottom: 0.5rem;
+    font-size: 1rem;
+    color: #333;
+    font-weight: bold;
+    text-align: right;
+    bottom: 2rem;
+    margin-right: 2rem;
+}
+
 .cancel-submit-buttons {
     display: flex;
     justify-content: flex-end;
-    position: fixed;
-    bottom: 1.25rem;
-    right: 1.25rem;
-    z-index: 1000;
     gap: 0.625rem;
 }
 
@@ -596,4 +603,16 @@
 .p-multiselect.p-focus .p-multiselect-trigger,
 .p-multiselect.p-multiselect-open .p-multiselect-trigger {
     transform: rotate(180deg); /* Arrow points up when expanded */
+}
+
+.statusMessage.neutral {
+    color: #555;
+}
+
+.statusMessage.success {
+    color: #28a745;
+}
+
+.statusMessage.error {
+    color: #dc3545;
 }
