--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -94,7 +94,7 @@ a {
   padding: 20px;
   border-radius: 8px;
   text-align: center;
-  color: #000000; /* Change this value to the color you want for the text */
+  color: #000000;
 }
 
 .modal-content button {
