--- a/frontend/src/app/components/AddPopup.css
+++ b/frontend/src/app/components/AddPopup.css
@@ -98,7 +98,7 @@ input, textarea {
 /* Button styling */
 button {
   display: inline-flex;
-  padding: 11px 20px;
+  /* padding: 1vh 1.5vw; */
   justify-content: center;
   align-items: center;
   gap: 10px;
@@ -108,7 +108,7 @@ button {
   box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.25);
   color: #FFF;
   text-align: center;
-  font-size: 20px;
+  font-size: 1rem;
   font-style: normal;
   font-weight: 400;
   line-height: normal;
