--- a/frontend/src/app/inventory/15Tablecomp/Inventory.css
+++ b/frontend/src/app/inventory/15Tablecomp/Inventory.css
@@ -72,27 +72,27 @@ box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.25);
 }
 
 .IDLabel {
-    padding-left: 7.8%;
+    padding-left: 6.2vw;
     color: #333;
 }
 
 .ItemLabel {
-    padding-left: 9.3%;
+    padding-left: 8.5%;
     color: #333;
 }
 
 .AvaiLabel {
-    padding-left: 7.5%;
+    padding-left: 6vw;
     color: #333;
 }
 
 .ConLabel {
-    padding-left: 3.8%;
+    padding-left: 4vw;
     color: #333;
 }
 
 .TagsLabel {
-    padding-left: 10%;
+    padding-left: 8vw;
     color: #333;
 }
 
