--- a/frontend/src/app/components/Sidebar/NavBar.module.css
+++ b/frontend/src/app/components/Sidebar/NavBar.module.css
@@ -30,6 +30,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  -webkit-aspect-ratio: 1; /* Display on Safari */
   aspect-ratio: 1;
   width: 48px;
   padding: 8px;
@@ -51,6 +52,7 @@
 }
 
 .navItem, .navItemActive, .navItemSettings {
+  border: none;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -65,6 +67,7 @@
 }
 
 .navItemSettings {
+  text-decoration: none;
   position: fixed;
   width: 90px;
   bottom: 10px;
@@ -84,10 +87,12 @@
 }
 
 .navItem:hover, .navItemSettings:hover {
+  text-decoration: none;
   transform: scale(1.1);
 }
 
 .navItem:focus {
+  text-decoration: none;
   outline: 2px solid #fff;
   outline-offset: -2px;
 }
@@ -98,19 +103,6 @@
   fill: white;
   transition: transform 0.3s ease;
 }
-
-/*--------------Maybe change something here to mke the svgs white-----------*/
-
-
-/* idk T_T */
-.otherSvgs svg {
-  fill: white;
-}
-
-.navItem IconComponent, .navItemSettings IconComponent {
-  fill: white;
-}
-
 /*--------------------------------------------------------------------------*/
 
 
@@ -154,6 +146,8 @@
 
 .label {
   color: white;
+  border: none;
+  text-decoration: none;
   font-size: 12px;
 }
 
