--- a/frontend/src/app/app.css
+++ b/frontend/src/app/app.css
@@ -14,11 +14,43 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 92vh;
-    width: 40vw;
+    height: 95%;
+    width: 40%;
     padding: 0 5vw 0 5vw;
     border-radius: 8px;
-    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.2), 0 1px 2px 0 rgba(0, 0, 0, 0.19)
+    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.2), 0 1px 2px 0 rgba(0, 0, 0, 0.19);
+    padding-bottom: 2%;
+  }
+
+.titleContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-weight: bolder;
+  width: 100%;
+  height: 100%;
+}
+
+.SMLogo {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  background-image: url("../../public/SM_LOGO.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 100%;
+  width: 100%;
+}
+
+.logo-shrink {
+  scale: 0.7;
+}
+
+.clothing-database {
+  color: #5E6171;
+  font-size: 1.5rem;
 }
 
 .confirmContainer {
@@ -27,44 +59,18 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  text-align: center;
   height: 35vh;
   width: 30vw;
   border-radius: 8px;
   box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.2), 0 1px 2px 0 rgba(0, 0, 0, 0.19);
   padding: 5% 0% 5% 0%;
-}
-  
-.titleContainer {
-  display: flex;
-  flex-direction: column;
-  font-size: 33px;
-  font-weight: bolder;
-  align-items: center;
-  justify-content: center;
-  padding: 5%;
-  width: 100%;
+  font-size: 1.5rem;
 }
 
-.bodyContainer {
-  font-size: 28px;
+.bodyConfirmContainer {
   font-weight: normal;
-}
-
-.SMLogo {
-  align-items: center;
-}
-
-.TheGoat {
-  background-image: url('https://www.hagca.com/uploads/1/2/7/1/127145683/holden-kittelberger-headshot_orig.jpg');
-  width: 100vw;
-  height: 100vh;
-  /*background-repeat: no-repeat;*/
-}
-
-h1 {
-  color: whitesmoke;
-  font-size: larger;
-  font-family: cursive;
+  max-width: 60%;
 }
 
 .resultContainer,
@@ -94,7 +100,8 @@ h1 {
 }
 
 .inputContainer {
-  justify-content: center;
+  position: relative;
+  justify-content: flex-end;
   padding-top: 2vh;
   padding-bottom: 2vh;
   width: 100%;
@@ -106,7 +113,7 @@ h1 {
 
 .inputContainer > .errorLabel {
   color: red;
-  font-size: 12px;
+  font-size: 0.75rem;
 }
 
 .password {
@@ -116,7 +123,7 @@ h1 {
 .inputBox {
   height: 6vh;
   width: 100%;
-  font-size: 20px;
+  font-size: 1rem;
   border-radius: 5px;
   border: 1px solid #9B525F;
   padding-left: 2vw;
@@ -139,7 +146,7 @@ h1 {
   background-color: #9B525F;
   color: white;
   padding: 1vh;
-  font-size: 28px;
+  font-size: 1.5rem;
   border-radius: 5px;
   cursor: pointer;
   width: 30vw;
@@ -150,7 +157,7 @@ h1 {
   background-color: #9B525F;
   color: white;
   padding: 1vh;
-  font-size: 28px;
+  font-size: 1.5rem;
   border-radius: 5px;
   cursor: pointer;
   width: 17vw;
@@ -167,7 +174,7 @@ h1 {
   align-self: flex-start;
   flex-flow: column nowrap;
   border-radius: 5px;
-  font-size: 12px;
+  font-size: 0.75rem;
 }
 
 .remember-pwd {
@@ -176,7 +183,7 @@ h1 {
   justify-content: space-between;
   gap: 10vw;
   margin-left: 0px;
-  font-size: 16px;
+  font-size: 0.75rem;
   width: 100%;
 }
 
@@ -185,20 +192,20 @@ h1 {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  font-size: 20px;
+  font-size: 1rem;
   gap: 0.5rem;
 }
 
 .textButton {
   background-color: #FFFFFF;
   border: none;
-  font-size: 20px;
+  font-size: 1rem;
   text-decoration: underline;
   cursor: pointer;
 }
 
 .tiny {
-  font-size: 16px;
+  font-size: 0.75rem;
 }
 
 * {
@@ -207,34 +214,63 @@ h1 {
 
 .passwordInfo {
     display: flex;
+    align-self: flex-start;
     flex-direction: column;
-    justify-content: flex-start;
-    text-align: left;
-    padding-top: 2vh;
+    margin-bottom: 2vh;
 }
 
 .passwordInfoP {
     margin: 0px;
-    font-size: 16px;
+    font-size: 0.75rem;
 }
 
 .namesContainer {
     display: flex;
     flex-direction: row nowrap;
-    gap: 2vw;
+    justify-content: space-between;
+    width: 100%;
     align-items: flex-end;
 }
 
 .names {
     height: 6vh;
-    width: 12vw;
-    font-size: 24px;
+    width: 14vw;
+    font-size: 1rem;
     border-radius: 5px;
     border: 1px solid #9B525F;
     padding-left: 2vw;
     padding-top: 0vw;
+    margin-right: 2vw;
 }
+
 .names::placeholder {
     color: #592A33;
     opacity: 1;
+}
+
+
+/* Forgot password-specific CSS */
+
+.forgot-password-container {
+  background-color: #FFFFFF;
+  flex-direction: column;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 60%;
+  width: 40%;
+  padding: 0 5vw 0 5vw;
+  border-radius: 8px;
+  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.2), 0 1px 2px 0 rgba(0, 0, 0, 0.19)
+}
+
+.forgot-password-text {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+}
+
+.password-text-larger {
+  font-size: 1.5rem;
 }
