--- a/frontend/src/app/dashboard/BarGraph.css
+++ b/frontend/src/app/dashboard/BarGraph.css
@@ -13,28 +13,25 @@
     align-items: center;
     justify-content: center;
     width: 15.5%;
-
-
 }
 
 .bar-label {
     color: rgba(0, 0, 0, 0.70);
     text-align: center;
     font-family: Inter;
-    font-size: 15px;
+    font-size: 1.5vh;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
-
 }
 
 .barGraphContainer {
     display: flex;
     flex-direction: column;
     align-items: left;
-    width: 65%; /* Make it responsive */
-    height: auto; /* Allow it to grow with content */
-    padding: 2%; /* Relative padding */
+    width: 100%;
+    height: auto;
+    padding: 2%;
     border-radius: 15px;
     background: #FFF;
     box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.25);
@@ -42,8 +39,8 @@
 
 .svgContainer {
     display: flex;
-    width: 100%; /* Take full width of parent */
-    height: auto; /* Allow it to scale */
+    width: 100%;
+    height: auto;
     justify-content: center;
     align-items: center;
 }
