--- a/frontend/src/app/components/DeletePopup.css
+++ b/frontend/src/app/components/DeletePopup.css
@@ -1,5 +1,3 @@
-/* Popup container */
-
 .deleteContainer {
     position: fixed;
     top: 0;
@@ -27,7 +25,6 @@
     gap: 10px;
     text-align: center;
     padding: 2.5rem 4rem;
-
     min-width: 300px;
     min-height: 200px;
 }
@@ -46,6 +43,7 @@
     justify-content: center;
     align-items: center;
     flex-direction: row;
+    gap: 1rem;
 }
 
 .confirmCancel {
@@ -60,6 +58,7 @@
     border-radius: 5px;
     border: 1.5px solid #C90024;
     background: #C90024;
+    color: #FFF;
     box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.25);
 }
 
