--- a/frontend/src/app/components/StylishButton.css
+++ b/frontend/src/app/components/StylishButton.css
@@ -88,10 +88,10 @@
     align-items: center;
     gap: 10px;
     border-radius: 5px;
-    border: 1px solid #C6C6C6;
-    background: #FFF;
+    border: 1px solid #585555;
+    background: #C6C6C6;
     box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.25);
-    color: #000;
+    color: #4F4141;
     text-align: center;
     font-family: Akatab;
     font-size: 1em;
