--- a/frontend/src/app/dashboard/BarGraph.css
+++ b/frontend/src/app/dashboard/BarGraph.css
@@ -1,28 +1,22 @@
-
-.barGraphTitle {
-
-}
-
 .bar {
     align-items: center;
     justify-content: center;
-    width: 15.5%;
 }
 
 .gray-bar {
     align-items: center;
     justify-content: center;
-    width: 15.5%;
 }
 
 .bar-label {
     color: rgba(0, 0, 0, 0.70);
     text-align: center;
     font-family: Inter;
-    font-size: 1.5vh;
+    font-size: 1.2vh;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
+    opacity: .7;
 }
 
 .barGraphContainer {
@@ -30,9 +24,7 @@
     flex-direction: column;
     align-items: left;
     width: 100%;
-    height: auto;
-    padding: 2%;
-    border-radius: 15px;
+    height: 100%;
     background: #FFF;
     box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.25);
 }
