--- a/frontend/src/app/inventory/15Tablecomp/InventoryUnit.css
+++ b/frontend/src/app/inventory/15Tablecomp/InventoryUnit.css
@@ -9,7 +9,7 @@
     color: #000000;
     font-size: 1rem;
     flex-shrink: 0;
-    border-bottom: 1px solid #9B525F;
+    outline: 1px solid #9B525F;
     background: #FFF;
 }
 
