--- a/frontend/src/app/inventory/15Tablecomp/Inventory.css
+++ b/frontend/src/app/inventory/15Tablecomp/Inventory.css
@@ -215,14 +215,14 @@ body, html {
 
 .select-num {
     display: inline-flex;
-    padding: 4px 15px;
+    padding: 0.25vw 0.5vw;
     justify-content: center;
     align-items: center;
-    gap: 10px;
     border-radius: 2px;
     border: 1px solid #8184A6;
     background: #FFF;
     box-shadow: 0px 3px 4px 0px rgba(0, 0, 0, 0.25);
+    z-index: 999;
 }
 
 
