small inventory formatting changes

--- a/frontend/src/app/components/StylishButton.css
+++ b/frontend/src/app/components/StylishButton.css
@@ -26,7 +26,7 @@
     color: #000;
     text-align: center;
     font-family: Akatab;
-    font-size: 1em;
+    font-size: 1rem;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
@@ -58,7 +58,7 @@
     color: #FFF;
     text-align: center;
     font-family: Akatab;
-    font-size: 1;
+    font-size: 1rem;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
@@ -96,7 +96,7 @@
     color: #4F4141;
     text-align: center;
     font-family: Akatab;
-    font-size: 1em;
+    font-size: 1rem;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
