pie chart key and file headers

--- a/frontend/src/app/dashboard/BarGraph.css
+++ b/frontend/src/app/dashboard/BarGraph.css
@@ -1,3 +1,10 @@
+/*
+ * Authors: Will and Angie
+ * Sprint: Dashboard #44
+ * Component: BarGraph
+ * Purpose: This file contains the css for the BarGraph component.
+*/
+
 .bar {
     align-items: center;
     justify-content: center;
