--- a/frontend/src/app/dashboard/PieChart.css
+++ b/frontend/src/app/dashboard/PieChart.css
@@ -1,7 +1,15 @@
+/*
+ * Authors: Angie and Will
+ * Sprint: Dashboard #44
+ * Component: Pie Chart
+ * Purpose: This file contains the css for the Pie Chart component.
+*/
+
 .chart-container {
     width: 100%;
     height: 100%;
     flex-shrink: 0;
+    align-items: center;
 }
 
 .svg-container {
@@ -10,16 +18,39 @@
 }
 
 .key-grid {
-    
+    display: grid;
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+    gap: 8px;
+    padding: 10px;
+    margin-top: 0px;
+    width: 90%;
+    margin-left: auto;
+    max-width: 600px;
+}
+
+.key-item {
+    display: flex;
+    align-items: center;
+    gap: 6px;
+    justify-content: left;
+    min-width: 0;
+}
+
+.key-dot {
+    width: clamp(5vh, 3.45vh, 2.3vh);
+    height: clamp(2.3vh, 1.5vh, 1vh);
+    border-radius: 4px;
+    flex-shrink: 0;
 }
 
 .chart-label {
-    color: rgba(0, 0, 0, 0.70);
+    color: black;
     text-align: center;
-    font-family: Inter;
-    font-size: 1.2vh;
+    font-size: clamp(0.7rem, 1.2vh, 1rem);
     font-style: normal;
     font-weight: 400;
     line-height: normal;
-    opacity: .7;
+    white-space: nowrap;
+    overflow: hidden;
+    max-width: 100%;
 }
