--- a/frontend/src/app/components/EditPage.css
+++ b/frontend/src/app/components/EditPage.css
@@ -1,3 +1,14 @@
+/**************************************************************
+ *
+ *                     EditPage.css
+ *
+ *        Authors: Dan Glorioso & Massimo Bottari
+ *           Date: 02/01/2025
+ *
+ *     Summary: This file contains the CSS for the EditPage component.
+ * 
+ **************************************************************/
+
 .add-page {
     width: 100vw;
     height: 100vh;
